2015-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web.am: Fix dependencies for 'make check'.

2015-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h: Declare convertStringToHexString() and getmd5sum().

2015-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/texmf.am: Always create mf-nowin, either as extra program
	or as symlink.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (tie_c, tie_m): New variables.
	* am/texmf.am: Use $(tie_c).

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Integrate MFLua and MFLuaJIT.
	* mfluadir, mfluajitdir: New directories.
	* mf.ch: Avoid conflict with mfluadir/mf-lua.ch.
	* Makefile.am, ac/web2c.ac, tangle-sh.in, texmfmp.h,
	* texmfmp-help.h, triptrap-sh: Adapted.

2015-05-21  Karl Berry  <karl@tug.org>

	* TL'15.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap/{mftrap,mptrap,trip}.diffs: Updated for TL 2015.

2015-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mftalk.h (removed): Moved from here to window/mftalk.h.
	* am/texmf.am: Adapted.

2015-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Define kpse_mf_progs and use KPSE_WITH_XMF.
	* configure.ac: Use KPSE_XMF_COND.

2015-03-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Correctly locate installed <kpathsea/paths.h>.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* w2c/config.h: Drop the strtol() prototype.

2015-03-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Initialize {EXTRA,lib}_{,LT}LIBRARIES.

2015-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Update some help texts.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2015-01-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cpascal.h: Remove intcast.

2015-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicopy.ch: Drop intcast().
	* dvitype.ch: Drop intcast().
	* gftodvi.ch: Drop intcast().